plugins/binding/csharp/source/TellusimCSMath.cs

		
		public static Vector3i operator*(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_mul(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator/(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_div(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator+(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_add(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator-(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_sub(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator&(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_and(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator|(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_or(ref ret, in v0, in v1); return ret; }
		public static Vector3i operator^(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_xor(ref ret, in v0, in v1); return ret; }
		
		public Vector3i abs() { Vector3i ret = new Vector3i(); tsVector3i_abs(ref ret, in this); return ret; }
		
		public static Vector3i min(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_min(ref ret, in v0, in v1); return ret; }
		public static Vector3i max(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_max(ref ret, in v0, in v1); return ret; }
		
		public Vector3i clamp(in Vector3i v0, in Vector3i v1) { Vector3i ret = new Vector3i(); tsVector3i_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", x, y, z); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_abs(ref Vector3i ret, in Vector3i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_neg(ref Vector3i ret, in Vector3i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_mul1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_div1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_add1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_sub1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_and1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_or1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_xor1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_shl1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_shr1(ref Vector3i ret, in Vector3i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_mul(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_div(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_add(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_sub(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_and(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_or(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_xor(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_min(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_max(ref Vector3i ret, in Vector3i v0, in Vector3i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3i_clamp(ref Vector3i ret, in Vector3i v, in Vector3i v0, in Vector3i v1);
		
		public static readonly Vector3i zero = new Vector3i(0);
		public static readonly Vector3i oneX = new Vector3i(1, 0, 0);
		public static readonly Vector3i oneY = new Vector3i(0, 1, 0);
		public static readonly Vector3i oneZ = new Vector3i(0, 0, 1);
		public static readonly Vector3i one = new Vector3i(1);
		
		public int x, y, z;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector3u {
		
		public Vector3u(uint v) { x = v; y = v; z = v; }
		public Vector3u(uint x, uint y, uint z) { this.x = x; this.y = y; this.z = z; }
		public Vector3u(in Vector2u v, uint z) { x = v.x; y = v.y; this.z = z; }
		public Vector3u(in Vector3u v) { x = v.x; y = v.y; z = v.z; }
		public Vector3u(in Vector4u v) { x = v.x; y = v.y; z = v.z; }
		public Vector3u(in Vector3i v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; }
		public Vector3u(in Vector3f v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; }
		public Vector3u(in Vector3d v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; }
		public Vector3u(in uint[] v) { x = v[0]; y = v[1]; z = v[2]; }
		
		public static Vector3u operator*(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_mul1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator/(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_div1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator+(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_add1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator-(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_sub1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator&(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_and1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator|(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_or1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator^(in Vector3u v0, uint v1) { Vector3u ret = new Vector3u(); tsVector3u_xor1(ref ret, in v0, v1); return ret; }
		public static Vector3u operator<<(in Vector3u v0, int v1) { Vector3u ret = new Vector3u(); tsVector3u_shl1(ref ret, in v0, (uint)v1); return ret; }
		public static Vector3u operator>>(in Vector3u v0, int v1) { Vector3u ret = new Vector3u(); tsVector3u_shr1(ref ret, in v0, (uint)v1); return ret; }
		
		public static Vector3u operator*(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_mul(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator/(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_div(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator+(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_add(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator-(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_sub(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator&(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_and(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator|(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_or(ref ret, in v0, in v1); return ret; }
		public static Vector3u operator^(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_xor(ref ret, in v0, in v1); return ret; }
		
		public static Vector3u min(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_min(ref ret, in v0, in v1); return ret; }
		public static Vector3u max(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_max(ref ret, in v0, in v1); return ret; }
		
		public Vector3u clamp(in Vector3u v0, in Vector3u v1) { Vector3u ret = new Vector3u(); tsVector3u_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2})", x, y, z); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_mul1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_div1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_add1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_sub1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_and1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_or1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_xor1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_shl1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_shr1(ref Vector3u ret, in Vector3u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_mul(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_div(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_add(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_sub(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_and(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_or(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_xor(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_min(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_max(ref Vector3u ret, in Vector3u v0, in Vector3u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector3u_clamp(ref Vector3u ret, in Vector3u v, in Vector3u v0, in Vector3u v1);
		
		public static readonly Vector3u zero = new Vector3u(0);
		public static readonly Vector3u oneX = new Vector3u(1, 0, 0);
		public static readonly Vector3u oneY = new Vector3u(0, 1, 0);
		public static readonly Vector3u oneZ = new Vector3u(0, 0, 1);
		public static readonly Vector3u one = new Vector3u(1);
		
		public uint x, y, z;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector3f {
		
		public Vector3f(float v) { x = v; y = v; z = v; }
		public Vector3f(float x, float y, float z) { this.x = x; this.y = y; this.z = z; }
		public Vector3f(in Vector2f v, float z) { x = v.x; y = v.y; this.z = z; }
		public Vector3f(in Vector3f v) { x = v.x; y = v.y; z = v.z; }
		public Vector3f(in Vector4f v) { x = v.x; y = v.y; z = v.z; }
		public Vector3f(in Vector3i v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; }
		public Vector3f(in Vector3u v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; }
		public Vector3f(in Vector3d v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; }
		public Vector3f(in float[] v) { x = v[0]; y = v[1]; z = v[2]; }
		
		public static Vector3f operator-(in Vector3f v) { Vector3f ret = new Vector3f(); tsVector3f_neg(ref ret, in v); return ret; }
